# OB-Nucleus

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml
cli/: ob_nucleus_cli.py
config/: nucleus_conventions.md  nucleus_schema.sql  taxonomy.md
docs/: AUDITY_CONNECTOR_QUALIFICATION.md  AUTOMATION_ROADMAP.md  DATA_CONTRACTS.md  PRD_OB1_REVENUE_LOOP.md  ob-nucleus-operations.sop.md
docs/handoffs/: 00_INDEX_THE_LARGER_PICTURE.md  01_DATA_LAYER.md  02_CONNECTOR_ROLLOUT.md  03_REVENUE_LOOP.md  04_TEAM_ENABLEMENT.md  05_STAKEHOLDER_COMMS.md  06_AUTOMATION_W1.md
knowledge/: ACTIVATION_BRIEF.md  QUICKREF.md  README.md
scripts/: daily_sweep.ps1  read_sweep.py
src/ob_nucleus/: __init__.py  api.py  cli.py  client.py  mcp_server.py  mirror.py  promote.py  sweep.py
supabase/: schema.sql  schema_v2.sql  schema_v3.sql
tests/: test_errors.py  test_guard.py  test_mirror.py
verification/: phase1_smoke.md  phase1_smoke_raw.json  read_sweep_2026-06-07.md  read_sweep_2026-06-08.md
